<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/color_white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/username"
                android:hint="@string/username_hint"
                android:layout_margin="16dp"
                android:maxLines="1"
                android:background="@drawable/rounded_border"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/password_hint"
                android:layout_margin="16dp"
                android:maxLines="1"
                android:background="@drawable/rounded_border"/>

            <info.hoang8f.widget.FButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:textStyle="bold"
                android:text="@string/sign_in"
                android:layout_margin="16dp"
                app:shadowEnabled="false"
                app:cornerRadius="3dp"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>